# voto-capital

./: .gitignore  CLAUDE.md  CLAUDE_draft.md  README.md  pyproject.toml
.claude/memory/: project_data_layout.md
dashboards/: etf_explorer.py
data/: bond_yield_changes.csv  elections.json  etf_argt.csv  etf_colo.csv  etf_ech.csv  etf_eww.csv  etf_ewz.csv  etf_qqq.csv  etf_vti.csv  fx_changes.csv  mapping_countries_files.json
data/raw/: ARGT ETF Stock Price History.csv  Argentina 9-Year Bond Yield Historical Data.csv  Brazil 10-Year Bond Yield Historical Data.csv  Chile 10-Year Bond Yield Historical Data.csv  Colombia 10-Year Bond Yield Historical Data.csv  Mexico 10-Year Bond Yield Historical Data.csv  USD_ARS Historical Data.csv  USD_BRL Historical Data.csv  USD_CLP Historical Data.csv  USD_COP Historical Data.csv  USD_MXN Historical Data.csv  United States 10-Year Bond Yield Historical Data.csv
scripts/: normalize_data.py
src/voto_capital/loaders/: elections.py  etf.py
src/voto_capital/transforms/: bonds.py  etf.py  fx.py
tests/loaders/: test_elections.py  test_etf.py
tests/transforms/: test_bonds.py  test_etf.py  test_fx.py
